kustomize/picoshare/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: picoshare
  namespace: picoshare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: picoshare
  template:
    metadata:
      labels:
        app: picoshare
    spec:
      containers:
      - env:
        - name: PORT
          value: "10209"
        - name: PS_SHARED_SECRET
          value: MjCLoiH/y1lLV8q1hTDPdw==
        image: tccr.io/truecharts/picoshare:v1.4.1
        name: picoshare
        ports:
        - containerPort: 10209
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: picoshare-pvc
