kustomize/picoshare/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: picoshare
  namespace: picoshare
  labels:
    app.kubernetes.io/name: picoshare
    app.kubernetes.io/instance: picoshare
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: picoshare
    app.kubernetes.io/managed-by: flux
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
    description: "Ingress for Picoshare file sharing application."
spec:
  ingressClassName: nginx
  rules:
  - host: share.stillon.top
    http:
      paths:
      - backend:
          service:
            name: picoshare
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - share.stillon.top
    secretName: share.stillon.top-tls # Ensure this matches the host if it's specific, or use a generic name like picoshare-tls
